# thesmartguard

./: .gitignore  README.md
arduino/motor_pin_test/: motor_pin_test.ino
arduino/robot_motor_controller/: robot_motor_controller.ino
backend/: encode_face.py  migrate_db.py  pyproject.toml  requirements.txt  run.py  seed_db.py  setup_video01.py  verify_auth.py  verify_face_lib.py  verify_token.py
backend/app/: __init__.py  config.py  models.py  robot_controller.py  routes.py  smartguard.db-shm  smartguard.db-wal  video_processor.py
backend/app/routes/: __init__.py  auth.py  cameras.py  faces.py  monitor.py  robot.py  settings.py  video.py
backend/reset_data/: check_encodings.py  cleanup_data.py  clear_data.py  clear_detections_only.py  debug_cleanup.py  reset_data.py  seed_db.py  setup_cameras.py  setup_video01.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  constants.js  index.css
frontend/src/components/: AddCameraModal.jsx  EditCameraModal.jsx  Header.jsx  RecentActivity.jsx  RecognizedFaces.jsx  RobotControl.jsx  SettingsModal.jsx  StatCard.jsx  StatusIndicator.jsx  VideoLoading.jsx  VideoPlayer.jsx
frontend/src/pages/: Login.jsx  StatusMonitor.jsx
frontend/src/services/: api.js
