[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "opencv-python>=4.13.0.92",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "ultralytics>=8.4.37",
    "pytz>=2026.1.post1",
    "imagehash>=4.3.2",
    "Pillow>=12.2.0",
    "face-recognition>=1.3.0",
    "cmake>=4.3.1",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "setuptools<70",
    "pyfirmata>=1.1.0",
    "pyfirmata2"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[project.scripts]
start = "run:main"
